--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,12 +34,12 @@
   name = "github.com/Al2Klimov/go-linux-apis"
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/Al2Klimov/go-pretty-print"
+  name = "github.com/Al2Klimov/go-monplug-utils"
+  version = "0.1.0"
 
 [[constraint]]
   branch = "master"
-  name = "golang.org/x/crypto"
+  name = "github.com/Al2Klimov/go-pretty-print"
 
 [[constraint]]
   branch = "master"
