Make Icinga 2 config actually working on nodes not being part of a cluster

--- a/icinga2/check_systemd_needrestart-service.conf
+++ b/icinga2/check_systemd_needrestart-service.conf
@@ -1,7 +1,9 @@
 apply Service "systemd_needrestart" {
     check_command = "systemd_needrestart"
 
-    command_endpoint = host.name
+    if (host.zone != "") {
+        command_endpoint = host.name
+    }
 
     assign where host.vars.check_systemd_needrestart
 }
